test/files/parser/errors/curly-list-start.otest
name = "Curly bracket after start of list"
line = 2
character = 2
error = 'Expected value, but received "{".'

---

[{
